--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
         "tailwindcss": "^3.2.1",
         "vite": "^6.0.11",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@fontsource/poppins": "^5.1.0",
+        "@fortawesome/fontawesome-free": "^6.6.0",
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-brands-svg-icons": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
+        "@vueform/multiselect": "^2.6.10",
+        "nprogress": "^0.2.0",
+        "xlsx": "^0.18.5"
     }
 }
