--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,14 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "kitloong/laravel-migrations-generator": "^7.0",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
+        "orangehill/iseed": "^3.0",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
